Fix setup password toggle button image flickering when non cached
This doesn't happen often, but on the very first load of the website, the button press loaded the image after switching the checked attribute, making the image appear as flickering. This loads the image in an unseen element, making the switch easier because the imagge will be cached.

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,12 @@ table.table-border {
     content: '\2713';
 }
 
+.checkbox-eye.boot-checkbox {
+    /* Fix non-cached image not loading directly when toggling checked and not */
+    background: url(../images/open-eye.png) -9999px -9999px no-repeat;
+    background-size: 0 0;
+}
+
 .checkbox-eye.boot-checkbox:not(:checked) + label {
     background: url(../images/closed-eye.png) 0 0px no-repeat;
     background-size: 100% 100%;
